fixed nano scroll issue with double scrollbar

--- a/public/bootstrap/less/trp3.less
+++ b/public/bootstrap/less/trp3.less
@@ -323,7 +323,6 @@ a:hover {
 	margin-top: 40px;
 	vertical-align: top;
 	margin-left: -200px;
-  overflow-y: auto;
   height: 90%;
 }
 
